Run kitchen without a wrapper cookbook & cleanup